reorganized into folders

--- a/Array Manipulation/ArrayManipulation.ipynb
+++ b/Array Manipulation/ArrayManipulation.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Some Interview Questions from Glassdoor:\n",
-    "\n",
-    "1. string sorting, time/space complexity, whiteboard the client/API/server architecture, understanding of promises\n",
-    "2. Code to look at housing trends.\n",
-    "3. String and array manipulation questions from cracking the coding interview book. \n",
-    "4. Build a react app that accepts two addresses and gives the closest real estate agencies to the two of the addresses.  \n",
-    "5. What are some advantages and disadvantages between NoSQL and SQL databases? Which one would you use in this case to solve said problem, and why?\n",
-    "6. Can you tell me all, or most commonly used, HTTP methods? Also, describe the standard usage for each method \n",
-    "7. How to improve the loading speed of a web page?  \n",
-    "8. Convert a nested list containing either nested lists or an integer to a single flat list  "
+    "## HackerRank Array Manipulation Questions"
    ]
   },
   {
@@ -33,18 +24,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## String Manipulation Question"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 2D Array Max Hourglass Sum\n",
     "\n",
     "Description: https://www.hackerrank.com/challenges/2d-array/problem\n",
     "\n",
-    "[Local Link](2d-array-English.pdf)"
+    "[Local Link](001-2d-array-English.pdf)"
    ]
   },
   {
@@ -321,7 +305,7 @@
     "\n",
     "Source: https://www.hackerrank.com/challenges/minimum-swaps-2/problem\n",
     "\n",
-    "[Local Link](minimum-swaps-2-English.pdf)"
+    "[Local Link](002-minimum-swaps-2-English.pdf)"
    ]
   },
   {
@@ -429,7 +413,7 @@
     "\n",
     "Source: https://www.hackerrank.com/challenges/new-year-chaos/problem\n",
     "\n",
-    "[Local Link](new-year-chaos-English.pdf)"
+    "[Local Link](003-new-year-chaos-English.pdf)"
    ]
   },
   {
@@ -513,7 +497,7 @@
     "\n",
     "Source: https://www.hackerrank.com/challenges/ctci-array-left-rotation/problem\n",
     "\n",
-    "[Local Link](ctci-array-left-rotation-English.pdf)"
+    "[Local Link](004-ctci-array-left-rotation-English.pdf)"
    ]
   },
   {
